Arrow SVG & Month Header Fixed
Month Header now becomes fixed on scroll down once it begins to go out of view.
Arrow SVG added to replace the previous arrows.

--- a/Calendar/styles.css
+++ b/Calendar/styles.css
@@ -53,6 +53,14 @@ section .select-menu button {
   background-color: #2D3B68;
   color: #F6F7F3;
 }
+section .select-menu button:hover {
+  background-color: #F6F7F3;
+  color: #2D3B68;
+}
+section .select-menu button:active {
+  transform: scale(0.9);
+}
+
 
 main h2 {
   font-size: 30px;
@@ -60,35 +68,32 @@ main h2 {
 main h3 {
   font-size: 12px;
 }
+main .month_container {
+  margin: 40px 0 40px 0;
+}
+main .month_container img:hover {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.1);
+}
 main .change_month {
   display: flex;
   justify-content: center;
-  width: 100%;
-  margin: 40px 0 20px 0;
+  width: fit-content;
+  height: 52px;
+  margin: auto;
+  background-color: #4C7EE5;
+  border: none;
+  border-radius: 10px;
+  z-index: 2;
 }
 main .change_month .month {
-  display: flex;
-  justify-content: center;
-  background-color: #4C7EE5;
-  width: 200px;
-  height: 50px;
+  width: 160px;
+  height: 100%;
   font-size: 30px;
-  border: solid 2px #201622;
-}
-main .change_month .arrow {
-  border: solid #201622;
-  border-width: 0 6px 6px 0;
-  display: inline-block;
-  padding: 3px;
-  height: 20px;
-  width: 20px;
-  margin-top: 12px;
+  line-height: 1.5;
 }
 main .change_month .left {
-  transform: rotate(135deg);
-}
-main .change_month .right {
-  transform: rotate(-45deg);
+  transform: rotate(180deg);
 }
 main .container {
   display: flex;
@@ -98,15 +103,16 @@ main .container {
   grid-template-columns: repeat(auto-fit, 250px);
   grid-auto-rows: 250px;
   grid-gap: 10px;
-  max-width: 960px;
-  margin: 0 auto;
+  max-width: 80%;
   margin-bottom: 400px;
 }
 main .container div {
+  transition: all .35s ease-in-out;
   background-color: #4C7EE5;
   padding: 10px;
   overflow: visible;
   border: 2px solid #201622;
+  border-radius: 10px;
 }
 main .container div h3:nth-of-type(1n+2) {
   margin-top: 10px;
@@ -115,7 +121,7 @@ main .container div:nth-child(even) {
   background-color: #2D3B68;
 }
 main .container div:hover {
-  transform: scale(2);
+  transform: scale(1.3);
   transition: all 0.5s ease-in-out;
   min-height: 250px;
   height: fit-content;
@@ -164,5 +170,6 @@ footer {
 footer p {
   margin-right: 15px;
 }
+
 
 /*# sourceMappingURL=styles.css.map */
